# local-mojiokoshi

./: .gitignore  LICENSE  Makefile  README.jp.md  README.md  pyproject.toml
.claude/commands/: realtime.md  transcribe.md
docs/: sequence-diagrams.md
scripts/: realtime.sh  transcribe.sh
src/mojiokoshi/: __init__.py  cli.py  realtime.py  recorder.py  summarize.py  transcriber.py
tests/: test_cli.py  test_realtime.py  test_recorder.py  test_summarize.py  test_transcriber.py
