[project]
name = "mojiokoshi"
version = "0.1.0"
description = "Audio transcription & meeting notes CLI tool with local LLM support"
readme = "README.md"
license = "MIT"
authors = [
    { name = "sogengineer", email = "sogen0921@icloud.com" }
]
keywords = ["transcription", "whisper", "meeting-notes", "ollama", "cli"]
requires-python = ">=3.11"
dependencies = [
    "mlx-whisper>=0.4.3",
    "numpy>=2.3.5",
    "pydantic>=2.12.5",
    "scipy>=1.17.0",
    "sounddevice>=0.5.3",
]

[project.scripts]
mojiokoshi = "mojiokoshi:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]
